<resources>
    <string name="app_name">DonDeSang</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="avant_de_donner_ton_sang">Avant de donner ton sang...</string>
    <string name="tu_ne_pr_sentes_aucun_risque_de_transmettre_des_maladies_par_le_sang">Tu ne présentes aucun risque de transmettre des maladies par le sang ?</string>
    <string name="bienvenue">Bienvenue !</string>
    <string name="tu_es_ag_entre_18_et_70_ans">Tu es agé entre 18 et 70 ans ?</string>
    <string name="alors_donne_ton_sang">Alors donne ton sang !</string>
    <string name="tu_as_entre_18_et_70_ans">Tu as entre 18 et 70 ans ?</string>
    <string name="aucun_risque_que_tu_transmettes_une_maladie_par_le_sang">Aucun risque que tu transmettes une maladie par le sang ?</string>
    <string name="tu_p_ses_au_moins_50_kg">Tu pèses au moins 50 Kg ?</string>
    <string name="tu_es_en_bonne_sant">Tu es en bonne santé ?</string>
    <string name="login">Login\\Adresse mail</string>
    <string name="password">Mot de passe</string>
    <string name="exempleLogin">Login</string>
    <string name="exemplePassword">Minimun 8 caractère</string>
    <string name="mdpOublie">Mot de passe oublié ?</string>
    <string name="buttonSeConnecter">Se connecter</string>
    <string name="pause">Pause Location Updates</string>
    <string name="resume">Resume Location Updates</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">719919561727444</string>
    <string name="fb_login_protocol_scheme">fb719919561727444</string>
    <string name="enregistrement">Enregistrement</string>
    <string name="f_a_q">F.A.Q</string>
    <string name="infos">Infos</string>
    <string name="rechercher_une_collecte">Rechercher une collecte</string>
    <string name="localisation">Localisation</string>
    <string name="entrer_une_adresse">Entrer une adresse</string>
    <string name="utiliser_ma_position">Utiliser ma position</string>
    <string name="ou">Ou</string>
    <string name="connexion">Connexion</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié</string>
    <string name="email">Email</string>
    <string name="r_initialiser_mot_de_passe">Réinitialiser mot de passe</string>
    <string name="notifications">Notifications</string>
    <string name="le_meilleur_moyen_de_nous_aider_n_venir_quand_on_vous_appel">Le meilleur moyen de nous aider ?   Venir quand on vous appel !</string>
    <string name="autoriser_les_notifications">Autoriser les notifications ?</string>
    <string name="autoriser_les_notifications_n_pour_les_plaquettes">Autoriser les notifications   pour les plaquettes ?</string>
    <string name="autoriser_les_notifications_n_pour_le_plasma">Autoriser les notifications   pour le plasma ?</string>
    <string name="recevoir_les_notifications_n_pour_quel_groupe_sanguin">Recevoir les notifications pour \n quel groupe sanguin ?</string>
    <string name="mettre_jour_mes_pr_f_rences">Mettre à jour mes préférences</string>
    <string name="mot_de_passe">Mot de passe :</string>
    <string name="prenom">Prenom :</string>
    <string name="nom">Nom :</string>
    <string name="num_ro">Numéro :</string>
    <string name="rue">Rue :</string>
    <string name="ville">Ville :</string>
    <string name="adresse">Adresse :</string>
    <string name="num_ro_de_gsm">Numéro de GSM :</string>
    <string name="naissance">Naissance :</string>
    <string name="groupe_sanguin">Groupe sanguin :</string>
    <string name="adresse_mail">Adresse mail :</string>
    <string name="login_form">Login :</string>
    <string name="voir_mes_stats">Voir mes stats</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="supprimer_mon_compte">Supprimer mon compte</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="confirmation_mot_de_passe">Confirmation mot de passe</string>
    <string name="score">Score</string>
    <string name="ton_nombre_de_points_jusqu_a_pr_sent">Ton nombre de points jusqu\'a présent</string>
    <string name="o_points">O points</string>
    <string name="_1000_points">1000 points</string>
    <string name="envie_de_gagner_encore_plus_de_points">Envie de gagner encore plus de points ?</string>
    <string name="partage_l_image_du_mois">Partage l\'image du mois !</string>
    <string name="partager_photo">Partager photo</string>
    <string name="se_connecter">Se connecter</string>
    <string name="gagner_50points">Vous avez gagné 50 points</string>
    <string name="erreur_partage">Partage échoué</string>
    <string name="reussite_partage">Partage réussi</string>
    <string name="annulation_partage">Partage annulé</string>
    <string name="connexion_voir_points"> Connecter vous pour voir vos points</string>
    <string name="connexion_partage_gagner_points"> Connecter vous pour partager l\'image et gagner des points !</string>
    <string name="points"> points</string>
    <string name="màj_effectué">Mise a jour effectuée</string>
    <string name="erreur_enregistrement">Erreur lors de l\'enregistrement</string>
    <string name="suppression">Supression</string>
    <string name="etes_vous_sur">Êtes-vous sûr ?</string>
    <string name="confirmation">Confirmation</string>
    <string name="reussite_suppression_compte">Compte Supprimer</string>
    <string name="echec_suppresison_compte">Impossible de supprimer le compte</string>
    <string name="preferences_mise_a_jour">Préférences mises à jour</string>
    <string name="erreur_chargement_infos">Erreur lors du chargement des questions / réponses !</string>
    <string name="activation_location">Activer la localisation</string>
    <string name="activiation_location_details">Activer les services de localisation \'Haute précision\' ou \'Economie d\'énergie\' pour utiliser cette application
 (Le GPS seul ne suffit pas)</string>
    <string name="activation_location_parametre">Paramètre de localisation</string>
    <string name="annuler">Annuler</string>
    <string name="numero">Numéro de maison</string>

    <string name="pas_de_numero">Pas de numéro de téléphone</string>
    <string name="tel">Tél: </string>
    <string name="de">\n \t De </string>
    <string name="a"> à </string>
    <string name="collectes_indisponible">Pas de collectes disponibles, veuillez vérifier votre connexion internet</string>
    <string name="connexion_impossible">Connexion impossible</string>
    <string name="erreur_credentials_connexion">Login ou mot de passe incorrecte</string>
    <string name="envoyer_mail">Un mail va être envoyé a  </string>
    <string name="erreur_mail">Adresse mail inexistante</string>
    <string name="erreur_inscription">Inscription impossbile</string>
    <string name="champs_invalide">Données invalides</string>
    <string name="erreur_mail_exist">Email déja utilisé</string>
    <string name="mauvais_mail">Adresse mail non valide</string>
    <string name="exception_deserialisation">Exception levée en voulant désérialisé un fichier de type : </string>
    <string name="exception_deserialisation_source">\n Source de l\'erreur : </string>
    <string name="erreur_client_statusCode">Erreur du client, Status code : </string>
    <string name="erreur_serveur_statusCode">Erreur du serveur, Status code : </string>
    <string name="exception_model">Exception levée ! Model : </string>
    <string name="exception_model_variable"> variable : </string>
    <string name="erreur_groupeSanguin">Impossible de charger les groupes sanguins</string>
    <string name="groupe_sanguin_aucun">Aucun</string>
    <string name="sunday">Dimanche</string>
    <string name="monday">Lundi</string>
    <string name="tuesday">Mardi</string>
    <string name="wednesday">Mercredi</string>
    <string name="thursday">Jeudi</string>
    <string name="friday">Vendredi</string>
    <string name="saturday">Samedi</string>
    <string name="jourNonDisponible">Jour non disponible</string>
    <string name="numGSM">Numéro GSM</string>
    <string name="dateNaissance">Date de naissance</string>
    <string name="statistiques">Statistiques</string>
    <string name="nombre_total_de_collectes_n_namur">Nombre total de collectes  \n à Namur :</string>
    <string name="nombre_de_dons_de_sang">Nombre de dons de sang :</string>
    <string name="nombre_d_utilisateurs_inscrit">Nombre d\'utilisateurs inscrit :</string>
    <string name="nombre_potentielle_de_n_vies_de_sauv_es">Nombre potentielle de \n  vies de sauvées :</string>
    <string name="merci_toi">Merci à toi !</string>
    <string name="l_application_a_aid_a_fournir">L\'application a aidé a fournir</string>
    <string name="tot_don_de_sang"> dons de sang \n à la Croix Rouge,</string>
    <string name="envoyer_le_mot_de_passe">Envoyer le mot de passe</string>
    <string name="mail_notFound">Adresse mail introuvable</string>
    <string name="password_reset_ok">Votre nouveau mot de passe vient d\'être envoyé à votre adresse mail</string>
    <string name="changer_mon_mot_de_passe">Changer mon mot de passe</string>
    <string name="profile">Profile</string>
    <string name="carte">Carte</string>
    <string name="notifications_menu">Notifications</string>
    <string name="score_menu">Score</string>
    <string name="infos_menu">Infos</string>
    <string name="erreur_mdp_identique">Les MDP ne sont pas identiques</string>
    <string name="mauvaise_syntaxe">Mauvaise syntaxe</string>
    <string name="adresse_vide">L\'adresse ne peut être vide !</string>
    <string name="caractere"> caractères</string>
    <string name="numero_adresse">Le numéro de maison doit contenir 1 numéro et 4 caractére maximun</string>
    <string name="inconnu">inconnu</string>
    <string name="GroupeOMois">O-</string>
    <string name="GroupeOPlus">O+</string>
    <string name="GroupeAMois">A-</string>
    <string name="GroupeAPlus">A+</string>
    <string name="GroupeABMois">AB-</string>
    <string name="GroupeABPlus">AB+</string>
    <string name="minimun">Minimun</string>
    <string name="maximun">Maximun</string>
    <string name="inscription">Confirmation inscription</string>
    <string name="accepter">Accepter</string>
    <string name="contrat_croixrouge">En cliquant sur "\Accepter"\ vous autorisez la Croix Rouge à utiliser vos données personnelles</string>
</resources>
